k8s/apps/planka/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planka
  namespace: planka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: planka
  template:
    metadata:
      labels:
        app: planka
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: planka
          image: ghcr.io/plankanban/planka:2.2.0
          ports:
            - name: http
              containerPort: 1337
              protocol: TCP

          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            privileged: false
            runAsUser: 1000
            runAsGroup: 1000
            seccompProfile:
              type: RuntimeDefault

          resources:
            requests:
              cpu: 150m
              memory: 256Mi
            limits:
              cpu: 300m
              memory: 512Mi

          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 3

          volumeMounts:
            - mountPath: /app/data
              name: data
            - mountPath: /app/logs
              subPath: app-logs
              name: emptydir
            - mountPath: /app/.tmp
              subPath: app-tmp
              name: emptydir
            - mountPath: /tmp
              subPath: tmp
              name: emptydir

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: planka-data
        - name: emptydir
          emptyDir: {}
